--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                     <li><a href="#footer" class="menu-item">КОНТАКТЫ</a>
                     <li>
                         <div class="socials1">
-                            <a href="#"><img src="img/vk.png" alt="ВК" class="social-img"></a>
-                            <a href="#"><img src="img/insta.png" alt="Инстаграмм" class="social-img"></a>
-                            <a href="#"><img src="img/yandex.png" alt="Яндекс музыка" class="social-img"></a>
-                            <a href="#"><img src="img/apple.png" alt="Apple музыка" class="social-img"></a>
-                            <a href="#"><img src="img/youtube.png" alt="Ютуб" class="social-img"></a>
+                            <a href="#"><img src="./img/vk.png" alt="ВК" class="social-img"></a>
+                            <a href="#"><img src="./img/insta.png" alt="Инстаграмм" class="social-img"></a>
+                            <a href="#"><img src="./img/yandex.png" alt="Яндекс музыка" class="social-img"></a>
+                            <a href="#"><img src="./img/apple.png" alt="Apple музыка" class="social-img"></a>
+                            <a href="#"><img src="./img/youtube.png" alt="Ютуб" class="social-img"></a>
                         </div>
                         <p class="menu-text">Все права защищены (с) Author Music 2024</p>
                 </ul>
             </div>
             <div class="line"></div>
             <div class="container-content container-content1">
-                <a href="/"><img src="/img/logo.png" alt="Лого" class="container-img-logo"></a>
-                <img src="/img/kessy1.png" alt="Кесси" class="container-img-kessy">
+                <a href="/"><img src="./img/logo.png" alt="Лого" class="container-img-logo"></a>
+                <img src="./img/kessy1.png" alt="Кесси" class="container-img-kessy">
             </div>
         </div>
         <!-- второй блок -->
